--- a/web/server/app/templates/index.html
+++ b/web/server/app/templates/index.html
@@ -10,7 +10,7 @@
     <title>BackNet</title>
 </head>
 <body>    
-    <div id="piano_container">
+    <div id="piano-container">
         <div id="notes">
             BachNet
         </div>
@@ -55,16 +55,16 @@
             </ul>
         </div>
         <div id="controller">
-            <button class="control_button" onclick="add_note()"> 
+            <button class="control-button" onclick="add_note()"> 
                 Add note
             </button>
-            <button class="control_button" onclick="remove_note()"> 
+            <button class="control-button" onclick="remove_note()"> 
                 Remove note
             </button>           
-            <button class="control_button"> 
+            <button class="control-button"> 
                 Play
             </button>              
-            <button onclick="harmonize()" class="control_button"> 
+            <button class="control-button" onclick="harmonize()"> 
                 Harmonize
             </button>              
         </div>        
